--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
         <nav>
             <div class="personal__logo">Brendan Schmidt</div>
             <ul class="nav__link--list">
-                <li>
+                <li class="nav__link">
                     <a href="" class="
                     nav__link--anchor
                     link__hover-effect
                     link__hover-effect--black">
                     Languages</a>
                 </li>
-                <li>
+                <li class="nav__link">
                     <a href="" class="
                     nav__link--anchor
                     link__hover-effect
                     link__hover-effect--black">
                     Projects</a>
                 </li>
-                <li>
+                <li class="nav__link">
                     <a href="" class="
                     nav__link--anchor
                     nav__link--anchor-primary">
@@ -39,10 +39,10 @@
             <div class="about-me__info row">
                 <div class="about-me__info--container">
                     <figure class="about-me__picture--mask">
-                        <img src="./assests/me.png" class="about-me__picture"alt="Picture of Me!">
+                        <img src="./assets/me.png" class="about-me__picture"alt="Picture of Me!">
                     </figure>
                     <h1 class="about-me__info--title">
-                        Hey! I'm <span class="text--purple">Brendan Schmidt</span>
+                        Hey! I'm <span class="text--purple">Brendan Schmidt</span>&nbsp;<span class="wave">👋</span>
                         
                     </h1>
                     <p class="about-me__info--para"> Lorem <strong class="text--purple"> dolor sit amet consectetur </strong>adipisicing elit. Enim deserunt nemo quae sapiente perferendis eum blanditiis consectetur.</p>
@@ -63,7 +63,7 @@
                     </div>
                 </div>
                 <figure class="about-me__img--container">
-                    <img src="./assests/undrawimage.svg" class= 
+                    <img src="./assets/undrawimage.svg" class= 
                     "about-me__img"alt="">
                 </figure>
             </div>
@@ -134,7 +134,7 @@
                         <ul class="project__list">
                             <li class="project">
                                 <div class="project__wrapper">
-                                    <img src="./assests/loopit.png" class="project__img" alt="">
+                                    <img src="./assets/loopit.png" class="project__img" alt="">
                                     <div class="project__description">
                                         <h3 class="project__description--title">
                                             Car Sales Project
@@ -156,7 +156,7 @@
                             </li>
                             <li class="project">
                                 <div class="project__wrapper">
-                                    <img src="./assests/loopit.png" class="project__img" alt="">
+                                    <img src="./assets/loopit.png" class="project__img" alt="">
                                     <div class="project__description">
                                         <h3 class="project__description--title">
                                             Car Sales Project
@@ -181,22 +181,40 @@
                 </div>
             </section>
         <footer>
-            <div class="container">
-                <div class="row">
-                    <a href="#">
-                        <figure>
-                            <img src="./assests/logo.svg" class="footer__logo--img"alt="">
-                        </figure>
-                    </a>
-                    <div class="footer__social--list">
-                        <a href="https://linkedin.com/schmidtbrendan" class="
-                         foooter__social--link
-                         link__hover-effect
-                         link__hover-effect--white
-                        " target="_blank"></a>
-                    </div>
-                </div> 
-            </div>
-        </footer>
+                <div class="row footer__row">
+                  <a href="#" class="footer__anchor">
+                    <figure class="footer__logo">
+                      <img src="./assets/logo.svg" class="footer__logo--img" alt="">
+                    </figure>
+                    <span class="footer__logo--popper">
+                      Top
+                      <i class="fas fa-arrow-up"></i>
+                    </span>
+                  </a>
+                  <div class="footer__social--list">
+                    <a href="https://google.com" target="_blank" class="
+                      footer__social--link
+                      link__hover-effect
+                      link__hover-effect--white
+                    " target="_blank">GitHub</a>
+                    <a href="https://google.com" target="_blank" class="
+                      footer__social--link
+                      link__hover-effect
+                      link__hover-effect--white
+                    " target="_blank">LinkedIn</a>
+                    <a href="mailto:email@email.com" target="_blank" class="
+                      footer__social--link
+                      link__hover-effect
+                      link__hover-effect--white
+                    " target="_blank">Email</a>
+                    <a href="./assets/Example Resume.pdf" download target="_blank" class="
+                      footer__social--link
+                      link__hover-effect
+                      link__hover-effect--white
+                    " target="_blank">Resume</a>
+                  </div>
+                  <div class="footer__copyright">Copyright © 2022 Brendan Schmidt</div>
+                </div>
+              </footer>
 </body>
 </html>
