--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                     </h1>
                     <p class="about-me__info--para"> Lorem <strong class="text--purple"> dolor sit amet consectetur </strong>adipisicing elit. Enim deserunt nemo quae sapiente perferendis eum blanditiis consectetur.</p>
                     <div class="aboutme__links">
-                        <a href="" class="about-me__link">
+                        <a href="https://www.linkedin.com/in/schmidtbrendan/" class="about-me__link">
                             <i class="fab fa-linkedin-in"></i>
                     </a>
-                        <a href="" class="about-me__link">
+                        <a href="https://github.com/Brendan-S20" class="about-me__link">
                             <i class="fab fa-github"></i>
                     </a>
                         <a href="" class="about-me__link">
@@ -82,45 +82,45 @@
                     </div>
                     <div class="language">
                         <figure class="language__img--wrapper">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="" class="language__img">
+                            <img src="https://cdn.iconscout.com/icon/free/png-256/css-131-722685.png" alt="" class="language__img">
                         </figure>
-                        <span class="language__name">HTML</span>
+                        <span class="language__name">CSS</span>
                     </div>
                     <div class="language">
                         <figure class="language__img--wrapper">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="" class="language__img">
+                            <img src="https://cdn.iconscout.com/icon/free/png-256/javascript-1-225993.png" alt="" class="language__img">
                         </figure>
-                        <span class="language__name">HTML</span>
+                        <span class="language__name">JavaScript</span>
                     </div>
                     <div class="language">
                         <figure class="language__img--wrapper">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="" class="language__img">
+                            <img src="https://cdn.iconscout.com/icon/free/png-256/react-3-1175109.png" alt="" class="language__img">
                         </figure>
-                        <span class="language__name">HTML</span>
+                        <span class="language__name">React</span>
                     </div>
                     <div class="language">
                         <figure class="language__img--wrapper">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="" class="language__img">
+                            <img src="https://cdn.iconscout.com/icon/free/png-256/typescript-3521774-2945272.png" alt="" class="language__img">
                         </figure>
-                        <span class="language__name">HTML</span>
+                        <span class="language__name">TypeScript</span>
                     </div>
                     <div class="language">
                         <figure class="language__img--wrapper">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="" class="language__img">
+                            <img src="https://cdn.iconscout.com/icon/free/png-256/adobe-photoshop-4238646-3516519.png" alt="" class="language__img">
                         </figure>
-                        <span class="language__name">HTML</span>
+                        <span class="language__name">Photoshop</span>
                     </div>
                     <div class="language">
                         <figure class="language__img--wrapper">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="" class="language__img">
+                            <img src="https://cdn.iconscout.com/icon/premium/png-256-thumb/illustrator-1698232-1445476.png" alt="" class="language__img">
                         </figure>
-                        <span class="language__name">HTML</span>
+                        <span class="language__name">Illustrator</span>
                     </div>
                     <div class="language">
                         <figure class="language__img--wrapper">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="" class="language__img">
+                            <img src="https://cdn.iconscout.com/icon/free/png-256/adobe-after-effects-3303129-2746532.png"alt="" class="language__img">
                         </figure>
-                        <span class="language__name">HTML</span>
+                        <span class="language__name">After Effects</span>
                     </div>
                </section>     
                 </div>
@@ -192,22 +192,22 @@
                     </span>
                   </a>
                   <div class="footer__social--list">
-                    <a href="https://google.com" target="_blank" class="
+                    <a href="https://github.com/Brendan-S20" target="_blank" class="
                       footer__social--link
                       link__hover-effect
                       link__hover-effect--white
                     " target="_blank">GitHub</a>
-                    <a href="https://google.com" target="_blank" class="
+                    <a href="https://www.linkedin.com/in/schmidtbrendan/" target="_blank" class="
                       footer__social--link
                       link__hover-effect
                       link__hover-effect--white
                     " target="_blank">LinkedIn</a>
-                    <a href="mailto:email@email.com" target="_blank" class="
+                    <a href="mailto:contact@brendan.pro" target="_blank" class="
                       footer__social--link
                       link__hover-effect
                       link__hover-effect--white
                     " target="_blank">Email</a>
-                    <a href="./assets/Example Resume.pdf" download target="_blank" class="
+                    <a href="./assets/brendans_resume.pdf" download target="_blank" class="
                       footer__social--link
                       link__hover-effect
                       link__hover-effect--white
