--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
             <div class="personal__logo">Brendan Schmidt</div>
             <ul class="nav__link--list">
                 <li class="nav__link">
-                    <a href="" class="
+                    <a href="#languages" class="
                     nav__link--anchor
                     link__hover-effect
                     link__hover-effect--black">
                     Languages</a>
                 </li>
                 <li class="nav__link">
-                    <a href="" class="
+                    <a href="#projects" class="
                     nav__link--anchor
                     link__hover-effect
                     link__hover-effect--black">
